--- a/package.json
+++ b/package.json
@@ -15,9 +15,16 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "better-scroll": "^1.15.2",
+    "date-fns": "^2.7.0",
+    "mint-ui": "^2.2.13",
+    "mockjs": "^1.0.1-beta3",
+    "moment": "^2.24.0",
     "swiper": "^5.2.0",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-lazyload": "^1.3.3",
+    "vue-router": "^3.0.1",
+    "vuex": "^3.1.2"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
